<resources>
    <string name="app_name">Mini_projekt_1</string>
    <string name="button">Button</string>
    <string name="go_to_shopping_list">Go to shopping list</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="lista">Lista</string>
    <string name="currency_sign">$</string>
    <string name="product_name">Product name:</string>
    <string name="specify_product_name">Specify product name</string>
    <string name="how_many">How many?</string>
    <string name="gotcha">Gotcha!</string>
    <string name="quantity">Quantity:</string>
    <string name="what_is_the_cost">What is the cost?</string>
    <string name="price">Price in $:</string>
    <string name="add_to_list">add to list</string>
    <string name="sdsdsd">sdsdsd</string>
    <string name="add_price_label">Price:</string>
    <string name="add_product_name_label">Product name:</string>
    <string name="add_quantity_label">Quantity:</string>
    <string name="enter_price_hint">Enter price</string>
    <string name="enter_product_name_hint">Enter product name</string>
    <string name="enter_quanitity_hint">Enter quanitity</string>
    <string name="add_button">Add</string>
    <string name="db_name">MyDatabase</string>
    <string name="add_product_details_click">Add product</string>
    <string name="add_prod_bought_checkbox">Bought</string>
    <string name="edit_product">Edit product</string>
    <string name="accept">Accept</string>
    <string name="black">Black</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="font_color">Font Color</string>
    <string name="font_size">Font size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="authorization">Sign out</string>
</resources>
