<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">


    <RadioGroup
        android:id="@+id/colorRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/font_color_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/font_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/blackColorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/black"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/redColorButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/red"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/blueColorButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/blue"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/accept_color_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/fontRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0" >

        <TextView
            android:id="@+id/font_size_radio_group_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/font_size" />

        <RadioButton
            android:id="@+id/font_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/small"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/font_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/medium"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/font_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/large"
            android:textStyle="bold" />

        <Button
            android:id="@+id/accept_font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/accept" />

    </RadioGroup>

</GridLayout>