<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/prod_name_label"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/product_name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/quantity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/quantity"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checked_checkbox"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="1"
        android:text="@string/gotcha"
        android:textAlignment="viewStart"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/price_label"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:text="@string/price"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/product_name_text_view"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:textSize="18sp" />


</GridLayout>